<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">egoFM</string>
    <string name="action_settings">Settings</string>
    <string name="menu_start_playback">Start Playback</string>
    <string name="action_stop_playback">Stop Playback</string>
    <string name="notification_default_title">egoFM</string>
    <string name="notification_connecting">Connecting…</string>
    <string name="notification_connection_error">Connection error</string>
    <string name="notification_disconnected">Disconnected</string>
    <string name="notification_default_text">endlich unter uns</string>
    <string name="notification_connected">Connected</string>
    <string name="tab_playlist">Playlist</string>
    <string name="datetimepicker_now">Now</string>
    <string name="playlist_no_results">No songs were found for the specified time period!</string>
    <string name="list_connection_error">A connection error occurred.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="prefs_streamquality_title">Stream quality</string>
    <string name="prefs_streamquality_summary">Sound-quality of the music stream</string>
    <string name="prefs_about">About</string>
    <string name="prefs_disclaimer">This app is not an official app by egoFM. It was developed independently and without mandate of egoFM. All displayed content can also be found on the official website.</string>
    <string name="title_activity_license">Licenses</string>
    <string name="licenses_title">Licenses</string>
    <string name="prefs_metadata">Update notification-metadata</string>
    <string name="tab_news">News</string>
    <string name="title_activity_news_item_fragment">News</string>
    <string name="empty_news">No news found!</string>

    <string-array name="quality_entries">
        <item>High (192 kbits)</item>
        <item>High via Wi-Fi only</item>
        <item>Low (128 kbits)</item>
    </string-array>
    <string-array name="quality_values">
        <item>high</item>
        <item>wifihigh</item>
        <item>low</item>
    </string-array>
    <string-array name="metadata_entries">
        <item>Every five seconds</item>
        <item>Every ten seconds</item>
        <item>Every 20 seconds</item>
        <item>Every 30 seconds</item>
        <item>Every 60 seconds</item>
    </string-array>
    <string-array name="metadata_values">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string name="url_stream_high">http://edge.live.mp3.mdn.newmedia.nacamar.net/egofm_192/livestream.mp3</string>
    <string name="url_stream_low">http://edge.live.mp3.mdn.newmedia.nacamar.net/egofm_128/livestream.mp3</string>

    <string name="license_datetimepicker"><![CDATA[Copyright 2013 Flavien Laurent (DatePicker) edisonw (TimePicker)\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n   http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.]]></string>
    <string name="license_volley"><![CDATA[Copyright © 2012 The Android Open Source Project\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n     http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.]]></string>
    <string name="license_jsoup"><![CDATA[The MIT License\nCopyright © 2009 – 2013 Jonathan Hedley (jonathan@hedley.net)\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.]]></string>
    <string name="license_pulltorefresh"><![CDATA[Copyright 2011, 2012 Chris Banes\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n   http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.]]></string>
    <string name="license_systembartint"><![CDATA[Copyright 2013 readyState Software Limited\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\n   http://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.]]></string>
    <string name="prefs_rate_playstore">Rate the app in Google Play Store</string>
    <string name="prefs_playstore">Play Store</string>
    <string name="chart_vote_unknown_response">Unknown response</string>
    <string name="chart_vote_connection_error">Connection error</string>
    <string name="tab_42">42</string>
    <string name="egofm_42_headline">This week\'s standings</string>
    <string name="preferences_feedback">Feedback</string>
    <string name="preferences_feedback_detail">Questions? Feature-Requests?</string>
    <string name="artist_description_not_found">No artist description available.</string>
    <string name="song_details_loading">Loading artist information …</string>
    <string name="song_details_album_subtitle_full">track #%1$d - duration %2$dm%3$ds</string>
    <string name="song_details_album_subtitle_duration">duration %1$dm%2$ds</string>
    <string name="song_details_album_subtitle_track">track #%1$d</string>
    <string name="song_details_about_label">About %1$s</string>
    <string name="song_details_about_label_default">ABOUT</string>
    <string name="prefs_general_category">General</string>
    <string name="song_details_tags_header">TAGS</string>
    <string name="song_details_album_header">ALBUM</string>
    <string name="lastfm_btn_url">http://www.lastfm.de/music/%1$s</string>


</resources>
