<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.nilsbo.egofm.activities.LicenseActivity$PlaceholderFragment">

        <TextView
            android:text="datetimepicker"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textColor="@color/egofm_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_datetimepicker"
            android:layout_marginBottom="16dp" />

        <TextView
            android:text="volley"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textColor="@color/egofm_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_volley" />

        <TextView
            android:text="jsoup"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textColor="@color/egofm_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_jsoup" />

        <TextView
            android:text="Android-PullToRefresh"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textColor="@color/egofm_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_pulltorefresh" />

        <TextView
            android:text="Android System Bar Tint"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:textColor="@color/egofm_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license_systembartint" />

    </LinearLayout>
</ScrollView>