<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <TextView
        android:id="@+id/song_details_album_label"
        android:text="@string/song_details_album_header"
        style="?android:attr/listSeparatorTextViewStyle"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="@color/egofm_green"
        android:background="@drawable/list_section_divider_egofm"
        android:layout_marginBottom="1dp" />

    <LinearLayout
        android:id="@+id/song_details_album_container"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="8dp"
        android:background="@drawable/egofm_list_selector_holo_light"
        android:clickable="true">

        <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/song_details_album_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <TextView
                android:id="@+id/song_details_album_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                tools:text="Fancy Footwork"
                style="@android:style/TextAppearance.DeviceDefault.Medium" />

            <TextView
                android:id="@+id/song_details_album_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"

                android:textColor="#888888"
                tools:text="track #3 duration 3m54s"
                style="@android:style/TextAppearance.DeviceDefault.Small" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/song_details_artist_label"
        android:text="@string/song_details_about_label_default"
        android:singleLine="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        style="?android:attr/listSeparatorTextViewStyle"
        android:textColor="@color/egofm_green"
        android:background="@drawable/list_section_divider_egofm"
        android:layout_marginBottom="1dp"

        />


    <TextView
        android:id="@+id/song_details_artist_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="2dp"
        android:paddingBottom="8dp"
        android:textAlignment="textEnd"
        style="@android:style/TextAppearance.DeviceDefault.Small"
        android:textSize="15sp"
        android:lineSpacingExtra="1dp" />

    <TextView
        android:id="@+id/song_details_tags_label"
        android:text="@string/song_details_tags_header"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        style="?android:attr/listSeparatorTextViewStyle"
        android:textColor="@color/egofm_green"
        android:background="@drawable/list_section_divider_egofm"
        android:layout_marginBottom="1dp"

        />

    <TextView
        android:id="@+id/song_details_tags"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp"
        android:lineSpacingExtra="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light" />

    <ImageView
        android:id="@+id/song_details_lastfm_btn"
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:adjustViewBounds="true"
        android:layout_height="wrap_content"
        android:src="@drawable/lastfm_selector"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

</merge>